refactor: update DTO usages to use record-based implementation